# chess-engine

./: .gitignore  CMakeLists.txt
include/: board.hpp  fen.hpp  figure.hpp  utils.hpp
src/: board.cpp  fen.cpp  figure.cpp  main.cpp  utils.cpp
